--- a/src/python-redfish-raid/configs/dell.yaml
+++ b/src/python-redfish-raid/configs/dell.yaml
@@ -3,6 +3,7 @@ show_all:
 show_pr:
   prefix: /redfish/v1/Dell/Systems/System.Emdedded.1/Storage/DellController/RAID.Integrated.1-1
   property: PatrolReadState
+  recurse: True
 show_cc:
   prefix: /redfish/v1/Dell/Systems/System.Emdedded.1/Storage/DellController/RAID.Integrated.1-1
   property: TODO
@@ -11,6 +12,9 @@ show_bbu:
 show_enc:
   prefix: /redfish/v1/Chassis/Enclosure.Internal.0-1:RAID.Integrated.1-1
 show_disks:
-  prefix: /redfish/v1/
+  prefix: /redfish/v1/Chassis/Enclosure.Internal.0-1:RAID.Integrated.1-1
+  property: Drives
+  recurse: True
 show_logical:
-  prefix: TODO
+  prefix: /redfish/v1/Systems/System.Embedded.1/Storage/RAID.Integrated.1-1/Volumes
+  recurse: True
