--- a/src/python-redfish-raid/configs/dell.yaml
+++ b/src/python-redfish-raid/configs/dell.yaml
@@ -3,15 +3,15 @@ show_all:
   # recurse: 0
   json_filters:
     - key: pcislot
-      jq: .Oem.Dell.DellController.PCISlot
+      jq: Oem.Dell.DellController.PCISlot
     - key: patrolread
-      jq: .Oem.Dell.DellController.PatrolReadState
+      jq: Oem.Dell.DellController.PatrolReadState
     - key: firmware_version
-      jq: .Oem.Dell.DellController.ControllerFirmwareVersion
+      jq: Oem.Dell.DellController.ControllerFirmwareVersion
     - key: controller_model
-      jq: .StorageControllers[0].Model
+      jq: StorageControllers[0].Model
     - key: memsize
-      jq: .Oem.Dell.DellController.CacheSizeInMB
+      jq: Oem.Dell.DellController.CacheSizeInMB
   report: |
     Adapter # {pcislot}
     Adapter Name: {controller_model}
@@ -32,11 +32,61 @@ show_enc:
   prefix: /redfish/v1/Chassis/Enclosure.Internal.0-1:RAID.Integrated.1-1
   # recurse: 1
 show_disks:
-  prefix: /redfish/v1/Chassis/Enclosure.Internal.0-1:RAID.Integrated.1-1
+  prefix: /redfish/v1/Systems/System.Embedded.1/Storage/RAID.Integrated.1-1
   json_filters:
     - key: alldrives
-      jq: .Links.Drives[*].Oem
-  recurse: 3
+      jq: "Drives[*].{BlockSizeBytes: BlockSizeBytes, Revision: Revision, CapableSpeedGbs: CapableSpeedGbs, Manufacturer: Manufacturer, SerialNumber: SerialNumber, CapacityBytes: CapacityBytes, Model: Model, Name: Name}"
+      transforms:
+        CapacityBytes: naturalsize
+      # format: |
+      #   [{Name}]    ? ? ? ? {CapacityBytes} GB {Manufacturer} {SerialNumber} {Revision} : ?Configured(), Spun ?(UP/DOW)
+    - key: drivecount
+      jq: "\"Drives@odata.count\""
+    - key: failingcount
+      jq: "length(Drives[?(Status.Health != `null`)])"
+  # report: |
+  #   All Drives:
+  #   {alldrives}
+
+  #   There ared {drivecount} drives:
+
+  #   Failed or Rebuilding Disks:
+  #   There are {failingcount} failing drives out of {drivecount}
+
+#       BlockSizeBytes
+# CapableSpeedGbs
+# CapacityBytes
+# Description
+# Id
+# Manufacturer
+# MediaType
+# Model
+# Name
+# NegotiatedSpeedGbs
+# PartNumber
+# PredictedMediaLifeLeftPercent
+# Protocol
+# Revision
+# SerialNumber
+# Status
+
+# BlockSizeBytes
+# CapableSpeedGbs
+# CapacityBytes
+# Description
+# Id
+# Manufacturer
+# MediaType
+# Model
+# Name
+# NegotiatedSpeedGbs
+# PartNumber
+# PredictedMediaLifeLeftPercent
+# Protocol
+# Revision
+# SerialNumber
+# Status
+  recurse: 1
 show_logical:
   prefix: /redfish/v1/Systems/System.Embedded.1/Storage/RAID.Integrated.1-1/Volumes
   recurse: 2
